fix: remove horizontal scroll on RecipesListPage

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,7 +26,6 @@ pre {
 }
 
 .container {
-  min-width: 100vw;
   min-height: 100vh;
   padding: 0 $container-padding $space-xxl $container-padding;
   background-color: $color-bg;
